# dbxcarta

./: .env.sample  .gitignore  CLAUDE.md  Makefile  README.md  SECURITY_HARDEN_PLAN.md  align-catalog.md  align-env.md  align-phase-6.md  align-v2.md  align.md  carta-comparisson.md  clean-dense.md  clean-schemapile.md  cleanup.md  client.md  dbxcarta-core-plan.md  dbxcarta-core.md  dbxcarta-phase2.md  dbxcarta-phase3.md  dbxcarta-v5-fk.md  dbxcarta-v5-plan.md  dbxcarta-v6-plan.md  dbxcarta_client_local_20260513T225301Z.json  email.md  final-final-final.md  final-fixes.md  final-spark-test.md  final-v5.md  fix-client.md  fix-fk.md  fix-the-zombies-cleanup.md  fix.md  fixmefast.md  fk.md  migrate-plan.md  migrate.md  planner.md  pyproject.toml  really-fix-spark.md  (+10 more)
.cache/: candidates_500.json
.cache/questions_500/: batch_08b331e3dc30220e.json  batch_19eca21c7846b66e.json  batch_22bca16696596b3f.json  batch_2b4440c667166079.json  batch_2e8881eaf44249ab.json  batch_32ce9155e63183b5.json  batch_3a195cd62c43d814.json  batch_43c0900eecda1787.json  batch_454d082bb4e80672.json  batch_46e27b35e7e6147c.json  batch_4e8b90aef0f0c7f5.json  batch_587df958d5efe868.json  batch_6be95e74f928e31e.json  batch_881919cdffc71442.json  batch_8d9d9700515af45b.json  batch_94319e026da32cf2.json  batch_950733dcef1eff37.json  batch_b7991283d077b267.json  batch_b7d776b42c863f62.json  batch_bf31767081fed241.json  batch_c49d6f35a0fb9dc6.json  batch_d09de1327556d0dd.json  batch_d2087e73cdbacb09.json  batch_f56dc5be7f36d93b.json
.dbxcarta_cache/: graph_rag.json  no_context.json  schema_dump.json
.github/workflows/: major-release.yaml  minor-release.yaml  patch-release.yaml  publish.yaml  release.yaml  supply-chain.yml
docker-tests/: .env.example  README.md  docker-compose.yml
docs/: PYTHON-FOCUS-SKILL.md  README.md  best-practices.md  dbxcarta-v5-plan.md  dbxcarta-v7-plan.md  dense_1000-fix.md  dense_1000.md  extenda-metadata.md  final-fix-v2.md  fix-finance-genie-v2.md  fix-finance-genie.md  fk-discovery.md  graph-schema.excalidraw  improve-spark.md  metadata-matching.md  pipeline.md  take-4-finance-genie.md  validate-finance-genie.md  why-semantic.md
docs/explanation/: fk-discovery.md  why-semantic.md
docs/fk-gap/: internal-types.md
docs/proposal/: clean-boundaries.md  (+24 more)
examples/: BOOT.md
examples/dense-schema/: .env.sample  README.md  dbxcarta-overlay.env  filter_questions.py  pyproject.toml  questions.json  questions_1000.json
examples/dense-schema/.cache/: candidates_500.json
examples/dense-schema/.cache/questions/: batch_185754bf2477b4a7.json  batch_3aa4d838215c893a.json  batch_4555fd4be35ad32e.json  batch_4a6812d2c65c86b7.json  batch_5c465d1b624a4277.json  batch_69d76f099926d60d.json  batch_72fb7dbb834a2d60.json  batch_745e0703afe8a1d6.json  batch_7f61ad12b575e7f9.json  batch_8824dad40567df51.json  batch_9d52041a778d29c3.json  batch_b4974fb49e33bc96.json  batch_bfab2086d468ebf4.json  batch_c259c7e934153fdd.json  batch_c2f2df9897244620.json  batch_d41d5aea1d5d6cd7.json  batch_dfc1a09923e7a1ec.json  batch_eac7bd8ba58a715a.json  batch_ecc0236a7d7e4511.json  batch_ef8280e8da035891.json
examples/dense-schema/src/dbxcarta_dense_schema_example/: __init__.py  bootstrap.py  config.py  generator.py  materialize.py  preset.py  question_generator.py  utils.py
examples/dense-schema/src/dbxcarta_dense_schema_example/dataset/: __init__.py
examples/dense-schema/src/dbxcarta_dense_schema_example/questions/: __init__.py  config.py  generation.py
examples/dense-schema/tests/: test_generator.py
examples/integration/dense-schema/: README.md  filter_questions.py  pyproject.toml
examples/integration/dense-schema/src/dbxcarta_dense_schema_example/: __init__.py  config.py  materialize.py  preset.py  question_generator.py  utils.py
examples/integration/finance-genie/: .env.sample  README.md  dbxcarta-overlay.env  pyproject.toml
examples/integration/finance-genie/src/dbxcarta_finance_genie_example/: finance_genie.py  local_demo.py  questions.json  upload_questions.py
examples/schemapile/: .env.sample  README.md  dbxcarta-overlay.env  pyproject.toml  questions.json
examples/schemapile/.cache/: candidates_random_1000.json  slice_random_1000.json  slice_random_1000.json.params.json
examples/schemapile/.cache/questions/: sp_002489_project-52fec8bc2e0d46de.json  sp_008582_auth_services_schema_mysql-188bb292c3562e4f.json  sp_020891_v01__impl_usuario-d39f16942b04ab7c.json  sp_033815_schema-1f6436917b73f40b.json  sp_169810_init-a1524642672f6359.json  sp_178181_v4_026__create_unified_user-a424c04583e88a7c.json  sp_266628_tables-dbf41d2bbb2cba91.json  sp_289361_schema-e95516f9b2bed29f.json  sp_300813_erzeuge_zielzustand-99e6f4e5764ca3d7.json  sp_310630_schema-f713bc84a68e3a8a.json  sp_352545_capstone-3e78d5a27d4a9a31.json  sp_359146_formasnormais-98e15022743dbcc8.json  sp_365427_schema-511bb95a4a7de6db.json  sp_413175_01_tabledesign_exam21oct2018-85fde437231616a8.json  sp_422245_tableschemata-7f48b26476c40792.json  sp_435873_db-a14dd5ec4626fd69.json  sp_492424_create_adventuresoverflow-09aec451e766e109.json  sp_535132_zhuanglang-a81d6cb8a82a0c20.json  sp_594700_takeout-b90a35317e63b739.json  sp_596038_ddl_proyecto-b867e73be310fd7c.json
examples/schemapile/blueprint/: ATTRIBUTION.md  candidates_random_1000.json
examples/schemapile/scripts/: README.md  dump_question_context.py
examples/schemapile/src/dbxcarta_schemapile_example/: __init__.py  bootstrap.py  candidate_selector.py  config.py  materialize.py  preset.py  question_generator.py  slice_runner.py  utils.py
examples/schemapile/src/dbxcarta_schemapile_example/dataset/: __init__.py  candidates.py  config.py  slicing.py
examples/schemapile/src/dbxcarta_schemapile_example/questions/: __init__.py  config.py  generation.py
examples/schemapile/tests/: test_candidate_selector.py  test_config.py  test_materialize.py  test_preset.py
scripts/: _cluster_bootstrap.py  build_submit_wheel.py  clean-dbxcarta.py  run_autotest.py  run_dbxcarta.py  run_dbxcarta_client.py  run_demo.py  run_spike_ai_query.py  setup-openai-endpoint.py
tests/: conftest.py
(+307 files in other folders)
