[project]
name = "dbxcarta-workspace"
version = "1.0.0"
description = "Workspace for dbxcarta distributions"
authors = [
    { name = "Ryan Knight" },
]
requires-python = ">=3.12"
dependencies = [
    "dbxcarta-client",
    "dbxcarta-dense-schema-example",
    "dbxcarta-finance-genie-example",
    "dbxcarta-schemapile-example",
    "dbxcarta-spark",
]

[dependency-groups]
test = [
    "mypy",
    "pytest",
    "pyspark>=3.5",
    "types-requests",
]

[tool.uv]
package = false

[tool.uv.sources]
dbxcarta-client = { workspace = true }
dbxcarta-spark = { workspace = true }
dbxcarta-dense-schema-example = { workspace = true }
dbxcarta-finance-genie-example = { workspace = true }
dbxcarta-schemapile-example = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/dbxcarta-client",
    "packages/dbxcarta-spark",
    "examples/integration/dense-schema",
    "examples/integration/finance-genie",
    "examples/integration/schemapile",
]

[tool.pytest.ini_options]
addopts = "-m 'not live' --import-mode=importlib"
markers = [
    "live: tests that require a live Databricks profile, Neo4j, and a previously-loaded catalog (default pytest skips these)",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "dbxcarta.spark.contract",
    "dbxcarta.spark.ingest.fk.common",
    "dbxcarta.spark.ingest.fk.declared",
    "dbxcarta.spark.ingest.fk.metadata",
    "dbxcarta.spark.ingest.fk.semantic",
    "dbxcarta.spark.ingest.extract",
    "dbxcarta.spark.ingest.fk.discovery",
    "dbxcarta.spark.settings",
    "dbxcarta.spark.ingest.summary",
    "dbxcarta.spark.ingest.summary_io",
    "dbxcarta.spark.ingest.transform.staging",
    "dbxcarta.spark.ingest.transform.ledger",
    "dbxcarta.spark.ingest.load.neo4j_io",
    "dbxcarta.spark.ingest.preflight",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
