[project]
name = "dbxcarta-workspace"
version = "1.0.1"
description = "Workspace for dbxcarta distributions"
authors = [
    { name = "Ryan Knight" },
]
requires-python = ">=3.12"
dependencies = [
    "dbxcarta-client",
    "dbxcarta-dense-schema-example",
    "dbxcarta-finance-genie-example",
    "dbxcarta-schemapile-example",
    "dbxcarta-spark",
]

[dependency-groups]
test = [
    "mypy",
    "pytest",
    "pyspark>=3.5",
    "types-requests",
]

[tool.uv]
package = false

[tool.uv.sources]
dbxcarta-client = { workspace = true }
dbxcarta-spark = { workspace = true }
dbxcarta-dense-schema-example = { workspace = true }
dbxcarta-finance-genie-example = { workspace = true }
dbxcarta-schemapile-example = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/dbxcarta-client",
    "packages/dbxcarta-spark",
    "examples/integration/dense-schema",
    "examples/integration/finance-genie",
    "examples/integration/schemapile",
]

[tool.pytest.ini_options]
addopts = "-m 'not live and not slow' --import-mode=importlib"
markers = [
    "live: tests that require a live Databricks profile, Neo4j, and a previously-loaded catalog (default pytest skips these)",
    "slow: heavier guard/regression tests kept separate from the fast unit suite",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
