[project]
name = "dbxcarta-dense-schema-example"
version = "1.2.0"
description = "Dense single-schema fixture for dbxcarta Phase G evaluation (500/1000 tables)"
authors = [{ name = "Ryan Knight" }]
requires-python = ">=3.12"
dependencies = [
    "dbxcarta-client[graph]",
    "dbxcarta-core",
    "databricks-sdk>=0.40",
    "Faker==40.15.0",
    "python-dotenv",
    "orjson",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
dbxcarta-dense-generate = "dbxcarta_dense_schema_example.dataset.candidates:main"
dbxcarta-dense-generate-questions = "dbxcarta_dense_schema_example.questions.generation:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
dbxcarta-client = { workspace = true }
dbxcarta-core = { workspace = true }

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: tests that require a live Databricks workspace and Neo4j instance",
]
