[project]
name = "dbxcarta-schemapile-example"
version = "1.2.0"
description = "Reference dbxcarta example that materializes SchemaPile slices as Delta tables"
authors = [{ name = "Ryan Knight" }]
requires-python = ">=3.12"
dependencies = [
    "dbxcarta-client[graph]",
    "dbxcarta-core",
    "databricks-sdk>=0.40",
    "python-dotenv",
    "orjson",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
dbxcarta-schemapile-slice = "dbxcarta_schemapile_example.dataset.slicing:main"
dbxcarta-schemapile-select = "dbxcarta_schemapile_example.dataset.candidates:main"
dbxcarta-schemapile-generate-questions = "dbxcarta_schemapile_example.questions.generation:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
dbxcarta-client = { workspace = true }
dbxcarta-core = { workspace = true }

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: tests that require a live Databricks profile, a foundation-model endpoint, and a catalog provisioned by `dbxcarta bootstrap` (default pytest skips these)",
]
