[project]
name = "dbxcarta-finance-genie-example"
version = "0.1.0"
description = "Reference dbxcarta preset for the Finance Genie Lakehouse example"
authors = [{ name = "Ryan Knight" }]
requires-python = ">=3.12"
dependencies = [
    "dbxcarta-client",
    "dbxcarta-spark",
    "databricks-sdk>=0.40",
    "python-dotenv",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

# Local-dev override only: lets `uv sync` inside this repo resolve dbxcarta to
# the editable parent checkout. Outside consumers should remove this section and
# rely on the published dbxcarta wheel resolved from PyPI or their wheel index.
[tool.uv.sources]
dbxcarta-client = { workspace = true }
dbxcarta-spark = { workspace = true }

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: tests that require a live Databricks profile, Neo4j, and a previously-loaded catalog (default pytest skips these)",
]
